cmake_minimum_required(VERSION 3.9)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

include_directories(${CMAKE_SOURCE_DIR}/include)

add_subdirectory(leetcode/editor/cn/include)

add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(2-add-two-numbers leetcode/editor/cn/2-add-two-numbers.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(80-remove-duplicates-from-sorted-array-ii leetcode/editor/cn/80-remove-duplicates-from-sorted-array-ii.cpp)
add_executable(189-rotate-array leetcode/editor/cn/189-rotate-array.cpp)
add_executable(41-first-missing-positive leetcode/editor/cn/41-first-missing-positive.cpp)
add_executable(268-missing-number leetcode/editor/cn/268-missing-number.cpp)
add_executable(299-bulls-and-cows leetcode/editor/cn/299-bulls-and-cows.cpp)
add_executable(134-gas-station leetcode/editor/cn/134-gas-station.cpp)
add_executable(274-h-index leetcode/editor/cn/274-h-index.cpp)
add_executable(275-h-index-ii leetcode/editor/cn/275-h-index-ii.cpp)
add_executable(219-contains-duplicate-ii leetcode/editor/cn/219-contains-duplicate-ii.cpp)
add_executable(220-contains-duplicate-iii leetcode/editor/cn/220-contains-duplicate-iii.cpp)
add_executable(55-jump-game leetcode/editor/cn/55-jump-game.cpp)
add_executable(45-jump-game-ii leetcode/editor/cn/45-jump-game-ii.cpp)
add_executable(121-best-time-to-buy-and-sell-stock leetcode/editor/cn/121-best-time-to-buy-and-sell-stock.cpp)
add_executable(122-best-time-to-buy-and-sell-stock-ii leetcode/editor/cn/122-best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(123-best-time-to-buy-and-sell-stock-iii leetcode/editor/cn/123-best-time-to-buy-and-sell-stock-iii.cpp)